# wows-container-log

./: .gitignore  .sourcery.yaml  README.md  main.py  pyproject.toml  user_settings.json  versioning.py  zensical.toml
docs/: index.md  wows_container_log.md
src/gui/: main_window.py
src/models/: container.py  drops.py
src/storage/: container_repo.py  databases.py
src/wows_container_log/: __init__.py  versioning.py
src/wows_container_log/gui/: main_window.py
src/wows_container_log/gui/dialogs/: reward_entry.py  reward_group.py  reward_item.py
src/wows_container_log/gui/panels/: group_editor_panel.py  item_editor_panel.py
src/wows_container_log/storage/: databases.py  entry_repo.py  group_repo.py  item_repo.py
